# git-flotilla

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PLANNING.md  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.flotilla/: config.yaml
.flotilla/repo-lists/: example-client.yaml
.github/workflows/: build-macos.yml
docs/: batch-operations.md  cli.md  configuration.md  cve-monitoring.md  getting-started.md  scanning.md
scripts/: build-windows.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  compliance.rs  cve.rs  merge_queue.rs  mod.rs  operations.rs  packages.rs  repos.rs  scan.rs  scripts.rs  settings.rs
src-tauri/src/db/: mod.rs  seed.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_accounts.sql
src-tauri/src/models/: mod.rs
src-tauri/src/services/: changelog.rs  config.rs  cve_scraper.rs  github.rs  gitlab.rs  mod.rs  rate_limiter.rs  scanner.rs  scheduler.rs  template.rs
src/router/: index.ts
src/services/: auth.ts  compliance.ts  cve.ts  mergeQueue.ts  operations.ts  packages.ts  repos.ts  scan.ts  scripts.ts  settings.ts  tauri.ts
src/stores/: auth.ts  compliance.ts  cve.ts  mergeQueue.ts  operations.ts  packages.ts  repoLists.ts  repos.ts  scans.ts  scripts.ts  settings.ts
src/styles/: main.css
src/types/: compliance.ts  cve.ts  mergeQueue.ts  operation.ts  package.ts  repo.ts  scan.ts  script.ts  settings.ts
src/views/: Auth.vue  CVEAlerts.vue  CVEIncident.vue  Compliance.vue  Dashboard.vue  DriftDashboard.vue  (+7 more)
(+22 files in other folders)
