[package]
name    = "git-flotilla"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (GitHub/GitLab APIs, CVE feeds)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# SQLite persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }

# Git operations
git2 = "0.19"

# OS keychain (token storage — never plaintext)
keyring = "3"

# Error handling
anyhow = "1"
thiserror = "2"

# YAML serialisation (for repo list import/export)
serde_yaml_ng = "0.9"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 decoding (GitHub content API)
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Paths
dirs = "5"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
